# You must change these to your own details.
[package]
name = "coocoo"
description = ""
version = "0.1.0"
authors = ["Cheng Su"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
build = "build.rs" # LALRPOP preprocessing


[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.68"
wee_alloc = { version = "0.4.2", optional = true }
photon-rs = "0.2.0"
lalrpop-util = "0.19.0"
regex = "1"
walrus = "0.18.0"
wat = "1.0.25"
wast = "24.0.0"

[build-dependencies] 
lalrpop = "0.17.2"


# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console",
    "ImageData",
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
