# You must change these to your own details.
[package]
name = "coocoo"
description = ""
version = "0.1.0"
authors = ["Cheng Su"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
build = "build.rs" # LALRPOP preprocessing


[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
#default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.45"
wee_alloc = { version = "0.4.2", optional = true }
wat = "1.0.5"
wast = "4.0.0"
walrus = "0.14.0"
lalrpop-util = "0.17.2"
regex = "0.2.1"

[build-dependencies] 
lalrpop = "0.17.2"


[dependencies.web-sys]
version = "0.3.22"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console",
    "ImageData",
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
